Atualiza o exemplo de gráfico de linhas para salvar a figura gerada

--- a/aula_visualização.ipynb
+++ b/aula_visualização.ipynb
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "language": "python"
       },
@@ -302,6 +302,7 @@
         "plt.xlabel('Eixo X')\n",
         "plt.ylabel('Eixo Y')\n",
         "plt.grid(True)\n",
+        "plt.savefig('line_plot_example.png')\n",
         "plt.show()"
       ]
     },
